# Exp_On_Hex

./: CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
include/: hex_tables.h
src/: exp_hex_tables.c
